--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "tailwindcss": "^4.0.5"
+    "tailwindcss": "^4.0.5",
+    "vercel": "^41.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
