--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
-node_modules
+# Node.js dependencies
+/node_modules/
+
+# Vite build output
+/dist/
+
+# Environment variables
+.env
+.env.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# IDE specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Temporary files
+*.tmp
+*.temp
+
+# TypeScript build artifacts
+*.tsbuildinfo
+
+# Git-related files
+.git/
+
+# Output from npm package bundling
+*.tgz
+
+# System-generated files
+*.log
