--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.4.5",
     "bootstrap": "^5.3.2",
     "firebase": "^10.14.1",
+    "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
