--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.5",
     "bootstrap": "^5.3.2",
     "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "tailwindcss": "^4.0.5",
+    "vercel": "^41.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
